operator/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.automation-team.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: alertmanager.automation-team.ru
    http:
      paths: 
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
  - host: grafana.automation-team.ru
    http:
      paths:
      - path: /
        backend: 
          serviceName: grafana
          servicePort: 3000
